--- a/index.html
+++ b/index.html
@@ -778,6 +778,122 @@
             </div>
         </section>
 
+        <!-- Morelos Refrendo Special Section (Approved Plan) -->
+        <section id="morelos-especial" class="section-padding">
+            <div class="container">
+                <div class="section-title">
+                    <h2 class="reveal"
+                        style="font-size: clamp(2rem, 5vw, 2.8rem); line-height: 1.2; margin-bottom: 1.5rem;">
+                        Refrendo Morelos 2026: Consulta y Pago en Línea
+                    </h2>
+                    <p class="reveal" style="max-width: 800px; margin: 0 auto 3rem;">
+                        Realizamos tu trámite de forma segura y profesional. Obtén tu nueva <strong>Tarjeta de
+                            Circulación Digital</strong> válida para circular en todo el país sin complicaciones.
+                    </p>
+                </div>
+
+                <div class="morelos-cards-grid reveal">
+                    <!-- Morelos Card -->
+                    <div class="service-item premium-item"
+                        style="border: 2px solid #2563eb; background: #fff !important;">
+                        <div class="service-header">
+                            <div class="service-icon" style="background: #2563eb; color: #fff;"><i
+                                    class="fas fa-money-check-alt"></i></div>
+                            <div>
+                                <h4 style="color: #1e293b;">Refrendo Morelos 2026</h4>
+                                <small style="color: #2563eb; font-weight: 700;">¡TRÁMITE 100% ONLINE!</small>
+                            </div>
+                        </div>
+                        <div style="margin: 1.5rem 0; border-top: 1px solid #f1f5f9; padding-top: 1.5rem;">
+                            <p style="margin: 0.5rem 0;"><strong>Costo oficial:</strong> $1,170.57 MXN</p>
+                            <p style="margin: 0.5rem 0; color: #16a34a;"><strong>Nuestro servicio:</strong> Desde $300
+                                MXN</p>
+                            <p style="font-size: 0.9rem; color: #64748b; margin-top: 1rem;">
+                                <strong>Requisitos:</strong> INE, Placas y 5 dígitos de Serie.
+                                Entrega en PDF oficial el mismo día.
+                            </p>
+                        </div>
+                        <a href="https://wa.me/525535757364?text=Hola,%20necesito%20pagar%20el%20refrendo%20de%20Morelos%20y%20obtener%20mi%20tarjeta%20digital"
+                            class="btn btn-whatsapp" style="width: 100%; justify-content: center; font-weight: 700;">
+                            Pagar Refrendo Ahora
+                        </a>
+                    </div>
+
+                    <!-- Edomex Card (Restored as requested) -->
+                    <div class="service-item premium-item"
+                        style="border: 2px solid #fbbf24; background: #fff !important;">
+                        <div class="service-header">
+                            <div class="service-icon" style="background: #fbbf24; color: #1a1a1a;"><i
+                                    class="fas fa-sync-alt"></i></div>
+                            <div>
+                                <h4 style="color: #1e293b;">Reemplacamiento 2026</h4>
+                                <small style="color: #d97706; font-weight: 700;">EDOMEX PLACAS 2021</small>
+                            </div>
+                        </div>
+                        <div style="margin: 1.5rem 0; border-top: 1px solid #f1f5f9; padding-top: 1.5rem;">
+                            <p style="margin: 0.5rem 0; color: #b91c1c;"><strong>¡OBLIGATORIO!</strong> Evita que tu
+                                auto se vaya al corralón.</p>
+                            <p style="font-size: 0.9rem; color: #64748b; margin-top: 1rem;">
+                                No dejes pasar más tiempo. El programa de reemplacamiento 2026 es vigente para todas las
+                                placas expedidas en 2021.
+                            </p>
+                        </div>
+                        <a href="https://wa.me/525535757364?text=Hola,%20me%20interesa%20el%20reemplacamiento%20Edomex%202026"
+                            class="btn btn-primary"
+                            style="width: 100%; justify-content: center; background: #1a1a1a; color: #fff; font-weight: 700;">
+                            Iniciar Trámite
+                        </a>
+                    </div>
+                </div>
+
+                <div class="comparison-wrapper reveal">
+                    <h3 style="text-align: center; margin-bottom: 2.5rem; color: #1e293b;">La evolución del trámite: De
+                        lo físico a lo digital</h3>
+
+                    <div class="comparison-container">
+                        <!-- Physical Card View -->
+                        <div class="card-view">
+                            <span class="card-label">Tarjeta Física (Anterior)</span>
+                            <div style="position: relative;">
+                                <img src="assets/images/tarjeta_fisica_morelos.jpg"
+                                    alt="Tarjeta de Circulación Física Morelos">
+                                <!-- Design-based Privacy Overlays for Physical Card -->
+                                <div class="mask-name" style="top: 36%; left: 8%; width: 52%; height: 16%;"></div>
+                                <div class="mask-serial" style="top: 37%; right: 8%; width: 30%; height: 8%;"></div>
+                                <div class="mask-qr" style="top: 4%; right: 4%; width: 16%; height: 20%;">
+                                    <i class="fas fa-qrcode"></i>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Digital Card View -->
+                        <div class="card-view">
+                            <span class="card-label" style="color: #2563eb;">Tarjeta Digital (Nueva 2026)</span>
+                            <div style="position: relative;">
+                                <img src="assets/images/tarjeta_digital_morelos.png"
+                                    alt="Tarjeta de Circulación Digital Morelos 2026">
+                                <!-- Design-based Privacy Overlays for Digital Card -->
+                                <div class="mask-name" style="top: 31%; left: 9%; width: 50%; height: 9%;"></div>
+                                <div class="mask-serial" style="top: 31%; right: 9%; width: 28%; height: 7%;"></div>
+                                <div class="mask-qr" style="top: 5%; right: 6%; width: 16%; height: 23%;">
+                                    <i class="fas fa-qrcode"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="comparison-info">
+                        <p>
+                            Al realizar tu <strong>refrendo en línea</strong> con nosotros, tramitamos tu tarjeta
+                            oficial directamente en el sistema de Morelos. Te entregamos un archivo digital PDF de alta
+                            seguridad que puedes portar en tu móvil o imprimir. <strong>Es 100% legal y verificable ante
+                                cualquier autoridad vial.</strong>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
 
 
         <!-- SEO Content Expansion: Coverage & FAQ -->
