--- a/index.html
+++ b/index.html
@@ -795,60 +795,61 @@
                 <div class="morelos-cards-grid reveal">
                     <!-- Morelos Card -->
                     <div class="service-item premium-item"
-                        style="border: 2px solid #2563eb; background: #fff !important;">
-                        <div class="service-header">
-                            <div class="service-icon" style="background: #2563eb; color: #fff;"><i
-                                    class="fas fa-money-check-alt"></i></div>
+                        style="border: 1px solid rgba(37, 99, 235, 0.2); background: rgba(255, 255, 255, 0.8) !important; backdrop-filter: blur(10px);">
+                        <div class="service-header" style="justify-content: center; text-align: center;">
                             <div>
-                                <h4 style="color: #1e293b;">Refrendo Morelos 2026</h4>
-                                <small style="color: #2563eb; font-weight: 700;">¡TRÁMITE 100% ONLINE!</small>
+                                <h4 style="color: #1e293b; font-size: 1.4rem; margin-bottom: 0.5rem;">Refrendo Morelos
+                                    2026</h4>
+                                <p
+                                    style="color: #2563eb; font-weight: 800; text-transform: uppercase; letter-spacing: 1px;">
+                                    ¡Trámite 100% Online!</p>
                             </div>
                         </div>
-                        <div style="margin: 1.5rem 0; border-top: 1px solid #f1f5f9; padding-top: 1.5rem;">
-                            <p style="margin: 0.5rem 0;"><strong>Costo oficial:</strong> $1,170.57 MXN</p>
-                            <p style="margin: 0.5rem 0; color: #16a34a;"><strong>Nuestro servicio:</strong> Desde $300
-                                MXN</p>
-                            <p style="font-size: 0.9rem; color: #64748b; margin-top: 1rem;">
-                                <strong>Requisitos:</strong> INE, Placas y 5 dígitos de Serie.
-                                Entrega en PDF oficial el mismo día.
+                        <div style="margin: 1rem 0; text-align: center;">
+                            <p style="margin: 0.3rem 0; font-size: 1.1rem;">Costo oficial: <strong>$1,170.57</strong>
+                            </p>
+                            <p style="margin: 0.3rem 0; color: #16a34a; font-weight: 600;">Servicio Exprés Garantizado
                             </p>
                         </div>
                         <a href="https://wa.me/525535757364?text=Hola,%20necesito%20pagar%20el%20refrendo%20de%20Morelos%20y%20obtener%20mi%20tarjeta%20digital"
-                            class="btn btn-whatsapp" style="width: 100%; justify-content: center; font-weight: 700;">
+                            class="btn btn-primary"
+                            style="width: 100%; justify-content: center; font-weight: 700; background: #2563eb; color: #fff; border-radius: 3rem;">
                             Pagar Refrendo Ahora
                         </a>
                     </div>
 
-                    <!-- Edomex Card (Restored as requested) -->
+                    <!-- Card Informativa Especial -->
                     <div class="service-item premium-item"
-                        style="border: 2px solid #fbbf24; background: #fff !important;">
-                        <div class="service-header">
-                            <div class="service-icon" style="background: #fbbf24; color: #1a1a1a;"><i
-                                    class="fas fa-sync-alt"></i></div>
+                        style="border: 1px solid rgba(37, 99, 235, 0.2); background: rgba(255, 255, 255, 0.8) !important; backdrop-filter: blur(10px);">
+                        <div class="service-header" style="justify-content: center; text-align: center;">
                             <div>
-                                <h4 style="color: #1e293b;">Reemplacamiento 2026</h4>
-                                <small style="color: #d97706; font-weight: 700;">EDOMEX PLACAS 2021</small>
+                                <h4 style="color: #1e293b; font-size: 1.4rem; margin-bottom: 0.5rem;">Tarjeta de
+                                    Circulación</h4>
+                                <p
+                                    style="color: #2563eb; font-weight: 800; text-transform: uppercase; letter-spacing: 1px;">
+                                    Fácil y Rápido Solo Conmigo</p>
                             </div>
                         </div>
-                        <div style="margin: 1.5rem 0; border-top: 1px solid #f1f5f9; padding-top: 1.5rem;">
-                            <p style="margin: 0.5rem 0; color: #b91c1c;"><strong>¡OBLIGATORIO!</strong> Evita que tu
-                                auto se vaya al corralón.</p>
-                            <p style="font-size: 0.9rem; color: #64748b; margin-top: 1rem;">
-                                No dejes pasar más tiempo. El programa de reemplacamiento 2026 es vigente para todas las
-                                placas expedidas en 2021.
+                        <div style="margin: 1rem 0; text-align: center;">
+                            <p style="font-size: 0.95rem; color: #475569;">
+                                No te compliques con sistemas lentos. Yo obtengo tu tarjeta digital de Morelos al
+                                instante y sin errores.
                             </p>
                         </div>
-                        <a href="https://wa.me/525535757364?text=Hola,%20me%20interesa%20el%20reemplacamiento%20Edomex%202026"
+                        <a href="https://wa.me/525535757364?text=Hola,%20quiero%20mi%20tarjeta%20de%20circulación%20de%20Morelos%20fácil%20y%20rápido"
                             class="btn btn-primary"
-                            style="width: 100%; justify-content: center; background: #1a1a1a; color: #fff; font-weight: 700;">
-                            Iniciar Trámite
+                            style="width: 100%; justify-content: center; font-weight: 700; background: #2563eb; color: #fff; border-radius: 3rem;">
+                            Pedir Mi Tarjeta
                         </a>
                     </div>
                 </div>
 
-                <div class="comparison-wrapper reveal">
-                    <h3 style="text-align: center; margin-bottom: 2.5rem; color: #1e293b;">La evolución del trámite: De
-                        lo físico a lo digital</h3>
+                <div class="comparison-wrapper reveal"
+                    style="background: #fff; border: 1px solid #e2e8f0; box-shadow: 0 15px 40px rgba(0,0,0,0.05);">
+                    <h3
+                        style="text-align: center; margin-bottom: 3rem; color: #111827; font-size: clamp(1.8rem, 4vw, 2.5rem); font-weight: 850; line-height: 1.1;">
+                        La evolución del trámite:<br><span style="color: #2563eb;">De lo físico a lo digital</span>
+                    </h3>
 
                     <div class="comparison-container">
                         <!-- Physical Card View -->
