--- a/index.html
+++ b/index.html
@@ -782,13 +782,16 @@
         <section id="morelos-especial" class="section-padding">
             <div class="container">
                 <div class="section-title">
+                    <span class="morelos-subtitle reveal">Servicio Exclusivo Morelos</span>
                     <h2 class="reveal"
-                        style="font-size: clamp(2rem, 5vw, 2.8rem); line-height: 1.2; margin-bottom: 1.5rem;">
-                        Refrendo Morelos 2026: Consulta y Pago en Línea
+                        style="font-size: clamp(2.2rem, 6vw, 3.2rem); line-height: 1.1; margin-bottom: 2rem; color: #0f172a;">
+                        Refrendo Morelos 2026<br>
+                        <span style="color: #2563eb;">Consulta y Pago Online</span>
                     </h2>
-                    <p class="reveal" style="max-width: 800px; margin: 0 auto 3rem;">
-                        Realizamos tu trámite de forma segura y profesional. Obtén tu nueva <strong>Tarjeta de
-                            Circulación Digital</strong> válida para circular en todo el país sin complicaciones.
+                    <p class="morelos-description reveal">
+                        Realizamos tu trámite de forma segura y profesional. Obtén tu nueva
+                        <strong>Tarjeta de Circulación Digital</strong>
+                        válida para circular en todo el país sin complicaciones.
                     </p>
                 </div>
 
