--- a/index.html
+++ b/index.html
@@ -781,18 +781,20 @@
         <!-- Morelos Refrendo Special Section (Approved Plan) -->
         <section id="morelos-especial" class="section-padding">
             <div class="container">
-                <div class="section-title">
-                    <span class="morelos-subtitle reveal">Servicio Exclusivo Morelos</span>
-                    <h2 class="reveal"
-                        style="font-size: clamp(2.2rem, 6vw, 3.2rem); line-height: 1.1; margin-bottom: 2rem; color: #0f172a;">
-                        Refrendo Morelos 2026<br>
-                        <span style="color: #2563eb;">Consulta y Pago Online</span>
+                <div class="morelos-feature-banner reveal">
+                    <h2 class="banner-title">
+                        Trámite <span class="banner-highlight">Fácil y Rápido</span> Solo Conmigo<br>
+                        Refrendo y Tarjeta de MORELOS
                     </h2>
-                    <p class="morelos-description reveal">
-                        Realizamos tu trámite de forma segura y profesional. Obtén tu nueva
-                        <strong>Tarjeta de Circulación Digital</strong>
-                        válida para circular en todo el país sin complicaciones.
+                    <p class="banner-text">
+                        Obtén tu nueva **Tarjeta de Circulación Digital** de forma segura y profesional. Válida para
+                        circular en todo México sin complicaciones.
                     </p>
+                    <div class="banner-footer">
+                        <span class="banner-tag">Sin Filas</span>
+                        <span class="banner-tag">100% Legal</span>
+                        <span class="banner-tag">Entrega Digital</span>
+                    </div>
                 </div>
 
                 <div class="morelos-cards-grid reveal">
