--- a/index.html
+++ b/index.html
@@ -781,20 +781,17 @@
         <!-- Morelos Refrendo Special Section (Approved Plan) -->
         <section id="morelos-especial" class="section-padding">
             <div class="container">
-                <div class="morelos-feature-banner reveal">
-                    <h2 class="banner-title">
-                        Trámite <span class="banner-highlight">Fácil y Rápido</span> Solo Conmigo<br>
+                <div class="section-title">
+                    <h2 class="reveal" style="font-size: clamp(2.2rem, 5vw, 3rem); margin-bottom: 2rem;">
+                        Trámite <span style="color: #2563eb;">Fácil y Rápido</span> Solo Conmigo<br>
                         Refrendo y Tarjeta de MORELOS
                     </h2>
-                    <p class="banner-text">
-                        Obtén tu nueva **Tarjeta de Circulación Digital** de forma segura y profesional. Válida para
-                        circular en todo México sin complicaciones.
+                    <p class="morelos-intro-text reveal">
+                        Realizamos tu trámite de forma segura y profesional. Obtén tu nueva
+                        <strong>Tarjeta de Circulación Digital</strong>
+                        válida para circular en todo el país sin complicaciones. Mi servicio te garantiza rapidez y
+                        total legalidad ante las autoridades.
                     </p>
-                    <div class="banner-footer">
-                        <span class="banner-tag">Sin Filas</span>
-                        <span class="banner-tag">100% Legal</span>
-                        <span class="banner-tag">Entrega Digital</span>
-                    </div>
                 </div>
 
                 <div class="morelos-cards-grid reveal">
