--- a/index.html
+++ b/index.html
@@ -782,16 +782,19 @@
         <section id="morelos-especial" class="section-padding">
             <div class="container">
                 <div class="section-title">
-                    <h2 class="reveal" style="font-size: clamp(2.2rem, 5vw, 3rem); margin-bottom: 2rem;">
-                        Trámite <span style="color: #2563eb;">Fácil y Rápido</span> Solo Conmigo<br>
-                        Refrendo y Tarjeta de MORELOS
+                    <h2 class="reveal"
+                        style="font-size: clamp(2rem, 5vw, 2.8rem); margin-bottom: 2rem; font-weight: 850;">
+                        Tu Trámite en <span style="color: #2563eb;">Segundos</span>
                     </h2>
-                    <p class="morelos-intro-text reveal">
-                        Realizamos tu trámite de forma segura y profesional. Obtén tu nueva
-                        <strong>Tarjeta de Circulación Digital</strong>
-                        válida para circular en todo el país sin complicaciones. Mi servicio te garantiza rapidez y
-                        total legalidad ante las autoridades.
-                    </p>
+                    <div class="morelos-apple-lines reveal">
+                        <span class="apple-line apple-line-1">Realizamos tu trámite de forma segura y
+                            profesional.</span>
+                        <span class="apple-line apple-line-2">Tarjeta de Circulación Digital</span>
+                        <span class="apple-line apple-line-3">Válida para circular en todo el país sin
+                            complicaciones.</span>
+                        <span class="apple-line apple-line-4">Mi servicio te garantiza rapidez y total legalidad ante
+                            las autoridades.</span>
+                    </div>
                 </div>
 
                 <div class="morelos-cards-grid reveal">
