--- a/index.html
+++ b/index.html
@@ -818,7 +818,7 @@
                         </div>
                         <a href="https://wa.me/525535757364?text=Hola,%20necesito%20pagar%20el%20refrendo%20de%20Morelos%20y%20obtener%20mi%20tarjeta%20digital"
                             class="btn btn-primary"
-                            style="width: 100%; justify-content: center; font-weight: 700; background: #2563eb; color: #fff; border-radius: 3rem;">
+                            style="width: auto; min-width: 180px; max-width: 240px; padding: 0.8rem 2rem; margin: 0 auto; display: flex; justify-content: center; font-weight: 700; background: #2563eb; color: #fff; border-radius: 3rem;">
                             Pagar Refrendo Ahora
                         </a>
                     </div>
@@ -843,7 +843,7 @@
                         </div>
                         <a href="https://wa.me/525535757364?text=Hola,%20quiero%20mi%20tarjeta%20de%20circulación%20de%20Morelos%20fácil%20y%20rápido"
                             class="btn btn-primary"
-                            style="width: 100%; justify-content: center; font-weight: 700; background: #2563eb; color: #fff; border-radius: 3rem;">
+                            style="width: auto; min-width: 180px; max-width: 240px; padding: 0.8rem 2rem; margin: 0 auto; display: flex; justify-content: center; font-weight: 700; background: #2563eb; color: #fff; border-radius: 3rem;">
                             Pedir Mi Tarjeta
                         </a>
                     </div>
@@ -853,7 +853,7 @@
                     style="background: #fff; border: 1px solid #e2e8f0; box-shadow: 0 15px 40px rgba(0,0,0,0.05);">
                     <h3
                         style="text-align: center; margin-bottom: 3rem; color: #111827; font-size: clamp(1.8rem, 4vw, 2.5rem); font-weight: 850; line-height: 1.1;">
-                        La evolución del trámite:<br><span style="color: #2563eb;">De lo físico a lo digital</span>
+                        Refrendo Morelos 2026:<br><span style="color: #2563eb;">Tu Nueva Tarjeta Digital</span>
                     </h3>
 
                     <div class="comparison-container">
