--- a/index.html
+++ b/index.html
@@ -351,7 +351,8 @@
                     </h1>
                     <p><strong data-i18n="hero_desc_bold">¿Buscas Placas o Licencia Permanente?</strong> <span
                             data-i18n="hero_desc_text">Somos expertos en <b>Trámites del Estado de México en línea</b>.
-                            Sin filas, sin citas presenciales. Cubrimos <b>EdoMex, CDMX, Chalco e Interlomas</b>.</span>
+                            Sin filas. Cubrimos <b>Todo el Estado de México, Chalco, Huixquilucan e Interlomas entre
+                                otros</b>.</span>
                     </p>
                     <div class="hero-buttons">
                         <a href="https://wa.me/525535757364?text=Hola,%20vengo%20por%20trámites%20online"
@@ -367,8 +368,9 @@
 
                     <div class="hero-trust-text">
                         <h2 data-i18n="trust_title">¿Por qué elegir Gestor de Autos?</h2>
-                        <p data-i18n="trust_subtitle">Líderes en <b>Trámites Estado de México en línea</b> y gestión
-                            vehicular sin complicaciones.
+                        <p data-i18n="trust_subtitle">Por que somos <b>Líderes en Trámites Estado de México en línea</b>
+                            y gestión vehicular sin complicaciones, tramitando <b>placas Genuinas desde hace más de 18
+                                años</b>.
                         </p>
                     </div>
 
@@ -389,11 +391,12 @@
 
                     <!-- New Trust Block (Per User Request) -->
                     <div class="hero-trust-block">
-                        <h2 class="trust-title">Realizamos tus trámites vehiculares</h2>
+                        <h2 class="trust-title">Realizamos los trámites vehiculares por Ti.</h2>
                         <p class="trust-desc">
-                            Gestor de Autos ofrece trámites vehiculares en múltiples estados de
-                            México: altas y bajas de placas, cambio de propietario,
-                            verificaciones, seguro y más.
+                            Gestor de Autos ofrece trámites vehiculares en múltiples estados de México: altas y bajas de
+                            placas, cambio de propietario, verificaciones, seguro y más, mira nuestro exelente Ranking
+                            en Google Maps (otros pueden tener mucho mas pero no dan una calidad exepcional como
+                            nosotros en tramites y un toque Humano siempre.)
                         </p>
                         <a href="https://maps.app.goo.gl/HEGvNwtQ4kYn3rpS7" target="_blank"
                             class="google-pill-badge glass-button">
@@ -517,58 +520,89 @@
                         </div>
 
                         <div class="service-item">
-                            <div class="service-icon"><i class="fas fa-globe-americas"></i></div>
-                            <div>
-                                <h4>Alta Foránea</h4>
-                                <small>Emplacamiento de otras entidades</small>
+                            <div class="service-header">
+                                <div class="service-icon"><i class="fas fa-globe-americas"></i></div>
+                                <div>
+                                    <h4>Alta Foránea</h4>
+                                    <small>Emplacamiento: <b>Morelos, Guerrero, Tlaxcala e Hidalgo</b></small>
+                                </div>
                             </div>
                         </div>
 
                         <div class="service-item premium-item">
-                            <div class="service-icon"><i class="fas fa-sync-alt"></i></div>
-                            <div>
-                                <h4>Reemplacamiento EdoMex 2026</h4>
-                                <small>Renovación obligatoria placas 2021</small>
+                            <div class="service-header">
+                                <div class="service-icon"><i class="fas fa-sync-alt"></i></div>
+                                <div>
+                                    <h4>Reemplacamiento EdoMex 2026</h4>
+                                    <small>Renovación obligatoria placas 2021, ¿cambio de propietario dentro de los
+                                        primeros
+                                        30 días de un nuevo vehículo? Aquí lo realizamos rápido por ti.</small>
+                                </div>
                             </div>
                         </div>
 
                         <div class="service-item">
-                            <div class="service-icon"><i class="fas fa-exchange-alt"></i></div>
-                            <div>
-                                <h4>Cambio de Propietario</h4>
-                                <small>Actualización de titularidad</small>
-                                <ul
-                                    style="margin-top: 0.5rem; font-size: 0.8em; color: #64748b; padding-left: 1.2rem; text-align: left;">
-                                    <li>Identificación Oficial (INE)</li>
-                                    <li>Factura de Origen</li>
-                                    <li>Comprobante de Domicilio</li>
-                                    <li>Tarjeta de Circulación</li>
-                                </ul>
+                            <div class="service-header">
+                                <div class="service-icon"><i class="fas fa-exchange-alt"></i></div>
+                                <div>
+                                    <h4>Cambio de Propietario</h4>
+                                    <small>Actualización de titularidad (refactura)</small>
+                                </div>
+                            </div>
+                            <ul
+                                style="margin-top: 0.5rem; font-size: 0.8em; color: #64748b; padding-left: 1.2rem; text-align: left;">
+                                <li>Identificación Oficial (INE)</li>
+                                <li>Factura de Origen</li>
+                                <li>Comprobante de Domicilio CFE</li>
+                                <li>Tarjeta de Circulación actual</li>
+                            </ul>
+                        </div>
+
+                        <div class="service-item">
+                            <div class="service-header">
+                                <div class="service-icon"><i class="fas fa-sync-alt"></i></div>
+                                <div>
+                                    <h4>Renovación y Canje</h4>
+                                    <small>Actualización de vigencia, ¿tus placas son 2021 o anteriores? Están por
+                                        vencer, evita multas y haz el trámite hoy aquí.</small>
+                                </div>
                             </div>
                         </div>
 
                         <div class="service-item">
-                            <div class="service-icon"><i class="fas fa-sync-alt"></i></div>
-                            <div>
-                                <h4>Renovación y Canje</h4>
-                                <small>Actualización de vigencia</small>
+                            <div class="service-header">
+                                <div class="service-icon"><i class="fas fa-id-card-alt"></i></div>
+                                <div>
+                                    <h4>Reposición de Tarjeta</h4>
+                                    <small>Recuperación por extravío</small>
+                                </div>
                             </div>
+                            <ul
+                                style="margin-top: 0.5rem; font-size: 0.8em; color: #64748b; padding-left: 1.2rem; text-align: left;">
+                                <li>Identificación Oficial (INE)</li>
+                                <li>Factura de Origen</li>
+                                <li>Comprobante de Domicilio CFE</li>
+                                <li>Tarjeta de Circulación actual</li>
+                            </ul>
                         </div>
 
                         <div class="service-item">
-                            <div class="service-icon"><i class="fas fa-id-card-alt"></i></div>
-                            <div>
-                                <h4>Reposición de Tarjeta</h4>
-                                <small>Recuperación por extravío</small>
+                            <div class="service-header">
+                                <div class="service-icon"><i class="fas fa-times-circle"></i></div>
+                                <div>
+                                    <h4>Baja General (EdoMex)</h4>
+                                    <small>Cese de obligaciones vehiculares</small>
+                                </div>
                             </div>
-                        </div>
-
-                        <div class="service-item">
-                            <div class="service-icon"><i class="fas fa-arrow-down"></i></div>
-                            <div>
-                                <h4>Baja General</h4>
-                                <small>Cese de obligaciones</small>
-                            </div>
+                            <ul
+                                style="margin-top: 0.5rem; font-size: 0.8em; color: #64748b; padding-left: 1.2rem; text-align: left;">
+                                <li><i class="fas fa-check" style="color: #16a34a; font-size: 0.8em;"></i> Evita cobros
+                                    futuros de tenencia</li>
+                                <li><i class="fas fa-check" style="color: #16a34a; font-size: 0.8em;"></i> Seguridad
+                                    total al vender tu auto</li>
+                                <li><i class="fas fa-check" style="color: #16a34a; font-size: 0.8em;"></i> Trámite 100%
+                                    legal y certificado</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -596,42 +630,49 @@
                         </div>
 
                         <div class="service-item">
-                            <div class="service-icon"><i class="fas fa-sync-alt"></i></div>
-                            <div>
-                                <h4>Renovación de Licencia</h4>
-                                <small>Actualización de vigencia</small>
+                            <div class="service-header">
+                                <div class="service-icon"><i class="fas fa-sync-alt"></i></div>
+                                <div>
+                                    <h4>Renovación de Licencia</h4>
+                                    <small>Actualización de vigencia</small>
+                                </div>
                             </div>
                         </div>
 
                         <div class="service-item">
-                            <div class="service-icon"><i class="fas fa-id-card-alt"></i></div>
-                            <div>
-                                <h4>Reposición de Licencia</h4>
-                                <small>Recuperación por extravío</small>
+                            <div class="service-header">
+                                <div class="service-icon"><i class="fas fa-id-card-alt"></i></div>
+                                <div>
+                                    <h4>Reposición de Licencia</h4>
+                                    <small>Recuperación por extravío</small>
+                                </div>
+                            </div>
+                            <ul
+                                style="margin-top: 0.5rem; font-size: 0.8em; color: #64748b; padding-left: 1.2rem; text-align: left;">
+                                <li>Identificación Oficial (INE)</li>
+                                <li>Factura de Origen</li>
+                                <li>Comprobante de Domicilio CFE</li>
+                                <li>Tarjeta de Circulación actual</li>
+                            </ul>
+                        </div>
+
+                        <div class="service-item">
+                            <div class="service-header">
+                                <div class="service-icon"><i class="fas fa-passport"></i></div>
+                                <div>
+                                    <h4>Permisos Provisionales</h4>
+                                    <small>Para circular sin placas</small>
+                                </div>
                             </div>
                         </div>
 
                         <div class="service-item">
-                            <div class="service-icon"><i class="fas fa-passport"></i></div>
-                            <div>
-                                <h4>Permisos Provisionales</h4>
-                                <small>Para circular sin placas</small>
-                            </div>
-                        </div>
-
-                        <div class="service-item">
-                            <div class="service-icon"><i class="fas fa-exchange-alt"></i></div>
-                            <div>
-                                <h4>Canje de Licencia</h4>
-                                <small>Actualización de tipo</small>
-                            </div>
-                        </div>
-
-                        <div class="service-item">
-                            <div class="service-icon"><i class="fas fa-file-medical"></i></div>
-                            <div>
-                                <h4>Examen Médico</h4>
-                                <small>Certificado de aptitud</small>
+                            <div class="service-header">
+                                <div class="service-icon"><i class="fas fa-exchange-alt"></i></div>
+                                <div>
+                                    <h4>Canje de Licencia</h4>
+                                    <small>Actualización de tipo</small>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -642,32 +683,40 @@
 
                     <div class="services-grid">
                         <div class="service-item">
-                            <div class="service-icon"><i class="fas fa-shipping-fast"></i></div>
-                            <div>
-                                <h4>Envíos a toda la República</h4>
-                                <small>Sin salir de casa. Nosotros hacemos todo el trámite por ti. Rápido, seguro y
-                                    confiable. Cobertura nacional garantizada.</small>
+                            <div class="service-header">
+                                <div class="service-icon"><i class="fas fa-shipping-fast"></i></div>
+                                <div>
+                                    <h4>Envíos a toda la República</h4>
+                                    <small>Sin salir de casa. Nosotros hacemos todo el trámite por ti. Rápido, seguro y
+                                        confiable. Cobertura nacional garantizada.</small>
+                                </div>
                             </div>
                         </div>
                         <div class="service-item">
-                            <div class="service-icon"><i class="fas fa-file-contract"></i></div>
-                            <div>
-                                <h4>Legalizaciones</h4>
-                                <small>Regularización de extranjeros</small>
+                            <div class="service-header">
+                                <div class="service-icon"><i class="fas fa-file-contract"></i></div>
+                                <div>
+                                    <h4>Legalizaciones</h4>
+                                    <small>Regularización de extranjeros</small>
+                                </div>
                             </div>
                         </div>
                         <div class="service-item">
-                            <div class="service-icon"><i class="fas fa-barcode"></i></div>
-                            <div>
-                                <h4>REPUVE</h4>
-                                <small>Inscripción, regularización, aduana y decreto</small>
+                            <div class="service-header">
+                                <div class="service-icon"><i class="fas fa-barcode"></i></div>
+                                <div>
+                                    <h4>REPUVE</h4>
+                                    <small>Inscripción, regularización, aduana y decreto</small>
+                                </div>
                             </div>
                         </div>
                         <div class="service-item">
-                            <div class="service-icon"><i class="fas fa-search"></i></div>
-                            <div>
-                                <h4>Reportes de Extravío</h4>
-                                <small>Gestión de actas</small>
+                            <div class="service-header">
+                                <div class="service-icon"><i class="fas fa-search"></i></div>
+                                <div>
+                                    <h4>Reportes de Extravío de placas o tarjeta</h4>
+                                    <small>Gestión de actas de la fiscalía</small>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -802,6 +851,7 @@
                     <div class="service-item premium-item"
                         style="border: 1px solid rgba(37, 99, 235, 0.2); background: rgba(255, 255, 255, 0.8) !important; backdrop-filter: blur(10px);">
                         <div class="service-header" style="justify-content: center; text-align: center;">
+                            <div class="service-icon"><i class="fas fa-file-invoice-dollar"></i></div>
                             <div>
                                 <h4 style="color: #1e293b; font-size: 1.4rem; margin-bottom: 0.5rem;">Refrendo Morelos
                                     2026</h4>
@@ -827,6 +877,7 @@
                     <div class="service-item premium-item"
                         style="border: 1px solid rgba(37, 99, 235, 0.2); background: rgba(255, 255, 255, 0.8) !important; backdrop-filter: blur(10px);">
                         <div class="service-header" style="justify-content: center; text-align: center;">
+                            <div class="service-icon"><i class="fas fa-id-card"></i></div>
                             <div>
                                 <h4 style="color: #1e293b; font-size: 1.4rem; margin-bottom: 0.5rem;">Tarjeta de
                                     Circulación</h4>
