--- a/index.html
+++ b/index.html
@@ -847,55 +847,53 @@
 
                 <div class="morelos-cards-grid reveal">
                     <!-- Morelos Card -->
-                    <div class="service-item premium-item"
-                        style="border: 1px solid rgba(37, 99, 235, 0.2); background: rgba(255, 255, 255, 0.8) !important; backdrop-filter: blur(10px);">
-                        <div class="service-header" style="justify-content: center; text-align: center;">
+                    <div class="service-item premium-item morelos-card">
+                        <div class="service-header">
                             <div class="service-icon"><i class="fas fa-file-invoice-dollar"></i></div>
                             <div>
-                                <h4 style="color: #1e293b; font-size: 1.4rem; margin-bottom: 0.5rem;">Refrendo Morelos
-                                    2026</h4>
+                                <h4>Refrendo Morelos 2026</h4>
                                 <p
                                     style="color: #2563eb; font-weight: 800; text-transform: uppercase; letter-spacing: 1px;">
                                     ¡Trámite 100% Online!</p>
                             </div>
                         </div>
-                        <div style="margin: 1rem 0; text-align: center;">
-                            <p style="margin: 0.3rem 0; font-size: 1.1rem;">Costo oficial: <strong>$1,170.57</strong>
+                        <div class="card-body-content">
+                            <p style="margin: 0.5rem 0; font-size: 1.1rem;">Costo oficial: <strong>$1,170.57</strong>
                             </p>
-                            <p style="margin: 0.3rem 0; color: #16a34a; font-weight: 600;">Servicio Exprés Garantizado
+                            <p style="margin: 0.5rem 0; color: #16a34a; font-weight: 600;">Servicio Exprés Garantizado
                             </p>
                         </div>
-                        <a href="https://wa.me/525535757364?text=Hola,%20necesito%20pagar%20el%20refrendo%20de%20Morelos%20y%20obtener%20mi%20tarjeta%20digital"
-                            class="btn btn-primary"
-                            style="width: auto; min-width: 180px; max-width: 240px; padding: 0.8rem 2rem; margin: 0 auto; display: flex; justify-content: center; font-weight: 700; background: #2563eb; color: #fff; border-radius: 3rem;">
-                            Pagar Refrendo Ahora
-                        </a>
+                        <div class="card-footer-action">
+                            <a href="https://wa.me/525535757364?text=Hola,%20necesito%20pagar%20el%20refrendo%20de%20Morelos%20y%20obtener%20mi%20tarjeta%20digital"
+                                class="btn-cta-blue">
+                                Pagar Refrendo Ahora
+                            </a>
+                        </div>
                     </div>
 
                     <!-- Card Informativa Especial -->
-                    <div class="service-item premium-item"
-                        style="border: 1px solid rgba(37, 99, 235, 0.2); background: rgba(255, 255, 255, 0.8) !important; backdrop-filter: blur(10px);">
-                        <div class="service-header" style="justify-content: center; text-align: center;">
+                    <div class="service-item premium-item morelos-card">
+                        <div class="service-header">
                             <div class="service-icon"><i class="fas fa-id-card"></i></div>
                             <div>
-                                <h4 style="color: #1e293b; font-size: 1.4rem; margin-bottom: 0.5rem;">Tarjeta de
-                                    Circulación</h4>
+                                <h4>Tarjeta de Circulación</h4>
                                 <p
                                     style="color: #2563eb; font-weight: 800; text-transform: uppercase; letter-spacing: 1px;">
                                     Fácil y Rápido Solo Conmigo</p>
                             </div>
                         </div>
-                        <div style="margin: 1rem 0; text-align: center;">
-                            <p style="font-size: 0.95rem; color: #475569;">
+                        <div class="card-body-content">
+                            <p style="font-size: 1rem; color: #475569; padding: 0 1rem;">
                                 No te compliques con sistemas lentos. Yo obtengo tu tarjeta digital de Morelos al
                                 instante y sin errores.
                             </p>
                         </div>
-                        <a href="https://wa.me/525535757364?text=Hola,%20quiero%20mi%20tarjeta%20de%20circulación%20de%20Morelos%20fácil%20y%20rápido"
-                            class="btn btn-primary"
-                            style="width: auto; min-width: 180px; max-width: 240px; padding: 0.8rem 2rem; margin: 0 auto; display: flex; justify-content: center; font-weight: 700; background: #2563eb; color: #fff; border-radius: 3rem;">
-                            Pedir Mi Tarjeta
-                        </a>
+                        <div class="card-footer-action">
+                            <a href="https://wa.me/525535757364?text=Hola,%20quiero%20mi%20tarjeta%20de%20circulación%20de%20Morelos%20fácil%20y%20rápido"
+                                class="btn-cta-blue">
+                                Pedir Mi Tarjeta
+                            </a>
+                        </div>
                     </div>
                 </div>
 
