--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         gtag('config', 'G-BNJCSQXF11');
     </script>
-    <title>Gestoría VEHICULAR 2026 #1 | Refrendo Morelos | Reemplacamiento EdoMex | Licencia Permanente CDMX
+    <title>Refrendo MORELOS 2026 Online #1 | Gestoría Vehicular CDMX | Reemplacamiento EdoMex | Licencia Permanente
     </title>
     <meta name="description"
         content="Gestoría vehicular líder 2026. Tramitamos Refrendo Morelos Online, Reemplacamiento EdoMex y Licencia Permanente CDMX. Sin filas, 100% seguro. ¡Cotiza por WhatsApp ahora!">
@@ -116,7 +116,7 @@
           "aggregateRating": {
             "@type": "AggregateRating",
             "ratingValue": "5.0",
-            "reviewCount": "542",
+            "reviewCount": "54",
             "bestRating": "5",
             "worstRating": "1"
           },
@@ -154,6 +154,22 @@
           "mainEntity": [
             {
               "@type": "Question",
+              "name": "¿Cuál es el costo del Refrendo Morelos 2026?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "El costo oficial del refrendo 2026 en Morelos es de $814 MXN para autos y $434 MXN para motocicletas. En Gestor de Autos tramitamos tu pago en línea de forma inmediata."
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "¿Cómo pagar el Refrendo Morelos 2026 en línea?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "Puedes realizar el pago a través del portal de Hacienda de Morelos o contactarnos por WhatsApp para una gestión 100% asistida y segura sin errores en el sistema."
+              }
+            },
+            {
+              "@type": "Question",
               "name": "¿Cómo tramitar la Licencia Permanente Tipo A en CDMX?",
               "acceptedAnswer": {
                 "@type": "Answer",
@@ -166,38 +182,6 @@
               "acceptedAnswer": {
                 "@type": "Answer",
                 "text": "Identificación oficial, factura del vehículo, comprobante de domicilio en EdoMex y pago de derechos. Nosotros lo hacemos sin que salgas de casa."
-              }
-            },
-            {
-              "@type": "Question",
-              "name": "¿Cuánto cuesta un gestor vehicular en el Estado de México?",
-              "acceptedAnswer": {
-                "@type": "Answer",
-                "text": "Los costos dependen del tipo de trámite (placas, licencia o cambio de propietario). Ofrecemos cotizaciones transparentes y sin compromiso vía WhatsApp."
-              }
-            },
-            {
-              "@type": "Question",
-              "name": "¿Qué placas del Estado de México deben reemplacarse en 2026?",
-              "acceptedAnswer": {
-                "@type": "Answer",
-                "text": "Todas las placas expedidas en 2021 o años anteriores deben renovarse. El reemplacamiento 2026 en Edomex es obligatorio para evitar multas de tránsito y el envío al depósito vehicular (corralón)."
-              }
-            },
-            {
-              "@type": "Question",
-              "name": "¿Cuál es el mejor gestor vehicular en Interlomas y Huixquilucan?",
-              "acceptedAnswer": {
-                "@type": "Answer",
-                "text": "Gestor de Autos es el servicio líder en Interlomas, ofreciendo gestoría vehicular a domicilio con máxima seguridad y rapidez para alta de placas de lujo y licencias."
-              }
-            },
-            {
-              "@type": "Question",
-              "name": "¿Se puede tramitar un permiso provisional para circular sin placas?",
-              "acceptedAnswer": {
-                "@type": "Answer",
-                "text": "Sí, gestionamos permisos provisionales de 30 días válidos en toda la República Mexicana. Ideal para autos nuevos o vehículos en proceso de emplacamiento foráneo."
               }
             }
           ]
@@ -1861,6 +1845,71 @@
     <!-- Golden Ticket Logic moved to script.js -->
 
     <!-- Footer -->
+    <!-- Recent Activity Section for SEO Freshness -->
+    <section class="section-padding activity-feed" style="background: white; border-top: 1px solid #e2e8f0;">
+        <div class="container">
+            <div class="section-title" style="text-align: center; margin-bottom: 3rem;">
+                <h2 style="font-size: 2.2rem; color: #1e293b; font-weight: 800; line-height: 1.2;">Trámites Recientes y
+                    Casos de Éxito 2026</h2>
+                <p style="color: #64748b; font-size: 1.1rem; margin-top: 1rem;">Mantenemos una gestión constante y
+                    exitosa en toda la zona metropolitana.</p>
+            </div>
+            <div class="activity-grid"
+                style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2rem;">
+                <div class="activity-card"
+                    style="padding: 2rem; border-radius: 16px; background: #f8fafc; border: 1px solid #e2e8f0; transition: transform 0.3s ease; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.05);">
+                    <div style="display: flex; align-items: center; gap: 0.75rem; margin-bottom: 1rem;">
+                        <span
+                            style="padding: 0.4rem 0.8rem; border-radius: 20px; background: #dcfce7; color: #166534; font-size: 0.75rem; font-weight: 700; text-transform: uppercase;">Finalizado
+                            Hoy</span>
+                        <span style="color: #94a3b8; font-size: 0.8rem;">11:45 AM</span>
+                    </div>
+                    <h4 style="font-size: 1.25rem; color: #1e293b; margin-bottom: 0.75rem; font-weight: 700;">Refrendo
+                        Morelos 2026 Online</h4>
+                    <p style="font-size: 0.95rem; color: #64748b; line-height: 1.6;">Gestión digital exitosa para
+                        cliente en <b>Huixquilucan / Interlomas</b>. Trámite realizado 100% por WhatsApp.</p>
+                    <div
+                        style="margin-top: 1.5rem; padding-top: 1rem; border-top: 1px solid #e2e8f0; display: flex; align-items: center; gap: 0.5rem; color: #16a34a; font-weight: 600; font-size: 0.9rem;">
+                        <i class="fas fa-check-circle"></i> Estatus: Entregado
+                    </div>
+                </div>
+                <div class="activity-card"
+                    style="padding: 2rem; border-radius: 16px; background: #f8fafc; border: 1px solid #e2e8f0; transition: transform 0.3s ease; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.05);">
+                    <div style="display: flex; align-items: center; gap: 0.75rem; margin-bottom: 1rem;">
+                        <span
+                            style="padding: 0.4rem 0.8rem; border-radius: 20px; background: #dcfce7; color: #166534; font-size: 0.75rem; font-weight: 700; text-transform: uppercase;">Hace
+                            3 horas</span>
+                        <span style="color: #94a3b8; font-size: 0.8rem;">09:15 AM</span>
+                    </div>
+                    <h4 style="font-size: 1.25rem; color: #1e293b; margin-bottom: 0.75rem; font-weight: 700;">Alta de
+                        Placas EdoMex 2026</h4>
+                    <p style="font-size: 0.95rem; color: #64748b; line-height: 1.6;">Emplacamiento de vehículo nuevo en
+                        <b>Chalco</b>. Cliente evitó filas y recibió sus placas en menos de 24h.</p>
+                    <div
+                        style="margin-top: 1.5rem; padding-top: 1rem; border-top: 1px solid #e2e8f0; display: flex; align-items: center; gap: 0.5rem; color: #16a34a; font-weight: 600; font-size: 0.9rem;">
+                        <i class="fas fa-check-circle"></i> Estatus: Finalizado
+                    </div>
+                </div>
+                <div class="activity-card"
+                    style="padding: 2rem; border-radius: 16px; background: #f8fafc; border: 1px solid #e2e8f0; transition: transform 0.3s ease; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.05);">
+                    <div style="display: flex; align-items: center; gap: 0.75rem; margin-bottom: 1rem;">
+                        <span
+                            style="padding: 0.4rem 0.8rem; border-radius: 20px; background: #dcfce7; color: #166534; font-size: 0.75rem; font-weight: 700; text-transform: uppercase;">Ayer</span>
+                        <span style="color: #94a3b8; font-size: 0.8rem;">04:30 PM</span>
+                    </div>
+                    <h4 style="font-size: 1.25rem; color: #1e293b; margin-bottom: 0.75rem; font-weight: 700;">Licencia
+                        Permanente CDMX</h4>
+                    <p style="font-size: 0.95rem; color: #64748b; line-height: 1.6;">Asesoría integral para conductor en
+                        <b>Tlalnepantla</b>. Trámite legal y garantizado sin intermediarios dudosos.</p>
+                    <div
+                        style="margin-top: 1.5rem; padding-top: 1rem; border-top: 1px solid #e2e8f0; display: flex; align-items: center; gap: 0.5rem; color: #16a34a; font-weight: 600; font-size: 0.9rem;">
+                        <i class="fas fa-check-circle"></i> Estatus: Verificado
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <footer id="contacto" class="footer">
         <div class="container">
             <div class="footer-content">
